--- a/Facebook_UI/style.css
+++ b/Facebook_UI/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&family=Poppins:wght@200;300;400&display=swap');
 :root{
     --primary : #438ce9;
     --main_bg : #f0f2f5;
@@ -17,6 +18,7 @@
 }
 body{
     background-color: var(--main_bg);
+    font-family: 'Poppins', sans-serif;
 
 }
 .nav{
@@ -147,12 +149,33 @@ body{
 /*bottom paragraph*/
 .fb{
     display: flex;
+    height: 100vh;
+   
 }
 .setting{
     width: 25%;
+    padding: 15px;
+    height: 100vh;
+    overflow: scroll;
 }
+.settingItem{
+    display: flex;
+    margin-bottom: 30px;
+}
+.setting-img img{
+   width: 30px;
+   height: 30px;
+   border-radius: 50%;
+   
+}
+.setting-name{
+    margin-left: 20px;
+    text-align: center;
+}
+
 .news-feed{
     width: 50%;
+    overflow: scroll;
     
 }
 .myday-list{
@@ -166,8 +189,8 @@ body{
     width: 20%;
     height: 210px;
     border-radius: 15px;
-    background-image: url(./images/jihyo.jpg);
-    background-size: 230%;
+    background-image: url(./mina/tzuyu3.jpg);
+    background-size: 110%;
     background-repeat: no-repeat;
     background-position: center;
     overflow: hidden;
@@ -176,21 +199,23 @@ body{
     flex-flow: column;
     justify-content: space-between;
     margin-right: 5px;
+    color: var(--text);
     
     
     
 }
 .bg1{
-    background-image: url(./images/twice1.jpg);
+    background-image: url(./mina/mina1.jpg);
+    
 }
 .bg2{
-    background-image: url(./images/twice2.jpg);
+    background-image: url(./mina/mina2.jpg);
 }
 .bg3{
-    background-image: url(./images/twice3.jpg);
+    background-image: url(./mina/tzuyu2.jpg);
 }
 .bg4{
-    background-image: url(./images/twice4.jpg);
+    background-image: url(./mina/tzuyu.jpg);
 }
 .myday-owner{
    width: 40px;
@@ -209,26 +234,15 @@ body{
 }
 .caption{
     color: #ffffff;
-    font-weight: bold;
+    font-weight: bolder;
 }
-.arrow{
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--sec_bg);
-    margin-left: 645px;
-    margin-top: 91px;
 
-}
 .add-post{
-    margin-top: 20px;
-    width: 100%;
+    width: 88%;
     background-color: var(--sec_bg);
     padding: 10px;
+    margin: 10px auto;
+
 }
 .writeFeed{
     display: flex;
@@ -257,6 +271,126 @@ body{
 .divider{
     border: 0.1px solid #f0f2f9;
 }
+.icons{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 20px;
+    flex-grow: 1;
+}
+.fa-video{
+   color: var(--danger);
+}
+.fa-photo-film{
+   color: var(--successs); 
+}
+.fa-face-grin{
+   color: var(--yellow);
+}
+.active-box{
+    width: 88%;
+    background-color: var(--sec_bg);
+    padding: 10px;
+    margin: 10px auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.create-room{
+    width: 150px;
+    height: 34px;
+    border: 0.1px solid rgb(181, 181, 237);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+}
+.create-room:hover{
+    background-color: #f0f2f9;
+}
+.create-room span{
+    color: var(--primary);
+}
+.active{
+    display: flex;
+    justify-content: space-evenly;
+    width: 300px;
+}
+.active-img{
+    position: relative;
+}
+.active-img img{
+   width: 40px;
+   height: 40px;
+   border-radius: 50%;
+   
+}
+
+.create{
+    color: #ac4bb2;
+}
+.new-post{
+    width: 88%;
+    background-color: var(--sec_bg);
+    
+    margin: 10px auto;
+}
+.header{
+    display: flex;
+    align-items: center;
+    padding: 10px;
+}
+.pp img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 8px;
+}
+.barnyar1{
+    display: flex;
+}
+.pp-name{
+
+}
+.time{
+    margin-right: 5px;
+
+}
+.public{
+
+}
+.caption{
+   
+    padding: 10px;
+}
+.post-img{
+    
+}
+.post-img img{
+    width: 100%;
+}
+.reaction{
+   
+}
+.count{
+    display: flex;
+    justify-content: space-evenly;
+}
+.fa-heart{
+    margin-right: 5px;
+    color: #e41e3f;
+}
+.heart{
+    display: flex;
+    align-items: center;
+}
+.divider1{
+    border: 0.1px solid #f0f2f9;
+    margin: 10px 0;
+    width: 80%;
+    
+}
 .chats{
     width: 25%;
 }
+
